feat: :fire: implement payment feature
